loopdowhile.LoopDoWhile.scala.error
Erreur de compilation :
LoopDoWhile:3: error: value lwhite is not a member of object java.awt.Color
}while (getCouleurSol!= Color.lwhite)
                              ^