loopdowhile.LoopDoWhile.scala.code
do {
   avance
}while (getCouleurSol!= Color.lwhite)
;